--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,8 @@
     <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+    <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico"> -->
+    <link rel="shortcut icon" href="{{ site.baseurl }}/img/profile-photo.jpeg">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
