add clustrmaps in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -329,3 +329,6 @@
         });
     });
 </script>
+
+<!-- clustrmaps at the bottom -->
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=lXGn6_YHDIOfGw2S7x489qh2ceP1nHMk1m5PD2L7SNE&cl=ffffff&w=300"></script>
