--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@
 
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico"> -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/img/profile-photo.jpeg">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/img/profile-photo.jpg">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
